# Gold

./: .bumpversion.cfg  .gitignore  .gitmodules  404.html  CLAUDE.md  CMakeLists.txt  CMakePresets.json  Cargo.toml  Makefile  README.md  README.rst  index.html  mkdocs.yml  sitemap.xml  test.gold  vcpkg.json  versions.json  zensical.toml
.github/workflows/: ci.yml  docs.yml  test.yml
2.2/: 404.html  index.html  requirements.txt  sitemap.xml
2.2/whirlwind/: index.html
3.0/: 404.html  index.html  search.json  sitemap.xml
3.0.0/: 404.html  index.html  sitemap.xml
3.0.0/formatting/: index.html
3.0.0/whirlwind/: index.html
3.0.1/: 404.html  index.html  sitemap.xml
3.0.1/formatting/: index.html
3.0.1/whirlwind/: index.html
3.0/formatting/: index.html
3.0/lexer/: pyproject.toml
3.0/lexer/gold_lexer.egg-info/: PKG-INFO  top_level.txt
3.0/whirlwind/: index.html
contrib/goldlang/: CHANGELOG.md  README.md  goldlang-0.0.1.vsix  language-configuration.json  package.json
contrib/goldlang/syntaxes/: gold.tmLanguage.json
dev/: 404.html  index.html  search.json  sitemap.xml
dev/formatting/: index.html
dev/lexer/: .gitignore  gold_lexer.py  pyproject.toml
dev/lexer/gold_lexer.egg-info/: SOURCES.txt  entry_points.txt
dev/search/: search_index.json
dev/whirlwind/: index.html
devel/: 404.html  index.html  sitemap.xml
devel/formatting/: index.html
devel/search/: search_index.json
devel/whirlwind/: index.html
docs/: extra.css  formatting.md  index.md  whirlwind.md
docs/lexer/: gold_lexer.py
examples/: dh-books.gold  dh-definitions.gold  dh-employees.gold  dh-filter-import.gold  dh-filter.gold  dh-functions.gold  dh-generate.gold  dh-hello-world.gold  dh-servers-2.gold  dh-servers.gold  dh-users.gold  fibonacci-recursive.gold  fibonacci.gold  import.gold  imported.gold
gold/: Cargo.toml
gold/examples/: dh-employees.gold  dh-filter.gold  dh-servers-2.gold
gold/src/: ast.rs  builtins.rs  compile.rs  error.rs  eval.rs  formatting.rs  lexing.rs  lib.rs  object.rs  parsing.rs  pprint.rs  python.rs  std.gold  traits.rs  types.rs  wrappers.rs
gold/src/ast/: high.rs  low.rs  mod.rs  scope.rs
gold/src/object/: function.rs  integer.rs  mod.rs  string.rs
gold/src/tests/: eval.rs  lexing.rs  mod.rs  object.rs  parsing.rs  serialize.rs
gold/tests/: eval_fixtures.rs
goldpy/: Cargo.toml  README.md  pyproject.toml
goldpy/src/: lib.rs
goldpy/test/: test_goldpy.py
include/: gold-common.hpp  gold.hpp
ref/: Makefile  pyproject.toml
ref/src/ref/: __init__.py  ast.py  error.py  evaluation.py  lexer.py  parser.py  pprint.py  span.py  types.py
ref/tests/: __init__.py  fixtures.py  test_evaluation.py  test_examples.py  test_fixtures.py  test_lexer.py  test_parser.py
search/: search_index.json
src/: ast.rs  builtins.rs  eval.rs  lib.rs  object.rs  parsing.rs  traits.rs
src/lib/: CMakeLists.txt  ast.cpp  evaluation.cpp  gold.cpp  grammar.cpp  normalize.cpp  parsing.cpp  serialization.cpp  stdlib.cpp
src/lib/include/: objects.hpp  parsing.hpp  tree.hpp
src/python/: .gitignore  CMakeLists.txt  main.cpp  setup.py
src/tests/: eval.rs  mod.rs  object.rs  parsing.rs  serialize.rs
stdlib/: CMakeLists.txt  std.gold
testdata/errors/: empty.out  fn-missing-body.out  if-missing-else.out  let-missing-body.out  let-missing-in.out  let-missing-in.parse  let-missing-value.out  nested-errors.out  unclosed-list.out  unclosed-map.gold  unclosed-map.out  unclosed-paren.out
testdata/eval/: bind-list-slurp.gold  bind-map-slurp.eval  builtin-endswith-true.gold  builtin-filter-fn.eval  builtin-int-float.gold  builtin-int-str.gold  builtin-isfloat.gold  builtin-isstr.gold  builtin-items.gold  builtin-len-map.gold  builtin-ord.gold  builtin-range-1.eval  builtin-range-2.gold  builtin-str-float.gold  cmp-bool-true-ne-int.gold  err-div-int-map.eval  err-div-int-map.gold  err-geq-map-bool.gold  err-greater-int-str.eval  err-has-int-int.gold  err-idiv-null-map.eval  err-interpolate-list.eval  err-iterate-map.eval  err-len-wrong-type-bool.eval  err-less-null-bool.eval  err-list-too-short.eval  err-list-too-short.gold  err-list-type.eval  err-map-key-missing.gold  err-map-key-null.gold  err-splat-list.gold  err-sub-str-int.eval  err-unassigned.gold  float-mul.gold  fn-closure.gold  fn-identity.gold  fn-kwargs-explicit.eval  has-list-false.gold  has-list-true.gold  has-map-true.gold  (+7 more)
testdata/eval/arith/: add-2.parse  add-float-both.eval  add-float-both.gold  add-float-both.parse  add-float-left.gold  add-float-left.parse  add-float-right.gold  add-float-right.parse  add-sub.gold  add-sub.parse  add.parse  assoc-floordiv-mul.gold  assoc-sub-add.parse  bigint-add-sub.gold  bigint-add-sub.parse  bigint-neg-sub-add.gold  bigint-neg-sub-add.parse  div-float-both.gold  div-float-both.parse  div-float-left.gold  div-float-left.parse  div-float-right.eval  div-float-right.gold  div-float-right.parse  div.parse  floordiv.parse  i64-overflow.eval  i64-overflow.gold  i64-overflow.parse  mul-add.eval  mul-add.parse  mul-float-left.eval  mul-float-left.parse  mul-float-right.gold  mul-float-right.parse  mul-parens.eval  mul-parens.parse  mul.eval  mul.parse  parens.eval  (+37 more)
testdata/eval/bool/: false.parse  not-false.parse  not-null.eval  (+4 more)
testdata/examples/: dh-books.eval  dh-books.out  dh-books.parse  dh-definitions.out  dh-definitions.parse  dh-employees.eval  dh-employees.out  dh-employees.parse  dh-filter.eval  dh-filter.out  dh-filter.parse  dh-functions.eval  dh-functions.out  dh-functions.parse  dh-generate.eval  dh-generate.out  dh-generate.parse  dh-hello-world.eval  dh-hello-world.out  dh-hello-world.parse  dh-servers-2.eval  dh-servers-2.out  dh-servers-2.parse  dh-servers.eval  dh-servers.out  dh-servers.parse  dh-users.eval  dh-users.out  dh-users.parse  fibonacci-recursive.eval  fibonacci-recursive.out  fibonacci-recursive.parse  fibonacci.out  fibonacci.parse  import.out  import.parse  imported.eval  imported.out  imported.parse
tests/: CMakeLists.txt  bindings.cpp  evaluate.cpp  object.cpp  parsing.cpp  scripts.cpp  serialization.cpp
whirlwind/: index.html
(+1096 files in other folders)
