[package]
name = "goldpy"
version = "3.0.0-a1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "goldpy"
crate-type = ["cdylib"]

[dependencies]
gold = { path = "../gold", features = ["python"] }
num-bigint = "0.4.3"
pyo3 = { version = "0.23.2", features = ["extension-module", "num-bigint"] }
