[project]
name = "ref"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Eivind Fonn", email = "evfonn@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "click>=8.3.3",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "pyrefly>=0.17",
    "ruff>=0.11",
]

[project.scripts]
ref = "ref:main"

[build-system]
requires = ["uv_build>=0.9.21,<0.10.0"]
build-backend = "uv_build"

[tool.ruff]
line-length = 110
include = ["src/**/*.py", "tests/**/*.py", "stubs/**/*.pyi"]

[tool.ruff.lint]
select = [
    "F",        # Pyflakes rules
    "W",        # PyCodeStyle warnings
    "E",        # PyCodeStyle errors
    "I",        # Sort imports properly
    "FA",
    "UP",       # Warn if certain things can changed due to newer Python versions
    "C4",       # Catch incorrect use of comprehensions, dict, list, etc
    "ISC",      # Good use of string concatenation
    "ICN",      # Use common import conventions
    "RET",      # Good return practices
    "SIM",      # Common simplification rules
    "TID",      # Some good import practices
    "TCH",      # Enforce importing certain types in a TYPE_CHECKING block
    "PTH",      # Use pathlib instead of os.path
    "TD",       # Be diligent with TODO comments
]
ignore = [
    "E741",     # Ambiguous variable name
    "SIM115",   # Complains if we use __enter__ inside an __enter__ method
    "ISC001",   # Conflicts with rust formatting
    "TD003",    # Issue links for each todo comment
]

[tool.ruff.lint.isort]
lines-after-imports = 2

[tool.pyrefly]
# pyrefly reads requires-python for the target version and auto-discovers
# sources from the package layout; add search_path if you need local stubs:
# search_path = ["stubs"]
search_path = ["."]
